--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,17 +17,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  bmc_cryptographic_flutter:
+#  bmc_cryptographic_flutter:
 #    # When depending on this package from a real application you should use:
 #    #   bmc_cryptographic_flutter: ^x.y.z
 #    # See https://dart.dev/tools/pub/dependencies#version-constraints
 #    # The example app is bundled with the plugin so we use a path dependency on
 #    # the parent directory to use the current plugin's version.
-    path: ../
+#    path: ../
   # Hoặc sử dụng git
-  #bmc_cryptographic_flutter:
-  #   git:
-  #     url: https://github.com/bmctechvn/bmc_crypto_flutter.git
+  bmc_cryptographic_flutter:
+     git:
+       url: https://github.com/bmctechvn/bmc_crypto_flutter.git
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
